Optimize stream collection to use toList() instead of Collectors.toList()
Co-authored-by: farook517 <56146198+farook517@users.noreply.github.com>